build: rename ember app & related changes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ember-cart",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for ember-cart goes here",
+  "description": "An E-Cart app build with EmberJS",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -43,7 +43,6 @@
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.0.3",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
