--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "prettier": "^2.2.1",
     "qunit": "^2.13.0",
     "qunit-dom": "^2.0.0",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "webpack": "^5.74.0"
   },
   "engines": {
     "node": "10.* || >= 12"
