--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "e-cart-app",
+  "name": "ember-cart",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for e-cart-app goes here",
+  "description": "Small description for ember-cart goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
