--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,35 +13,29 @@ concurrency:
 
 jobs:
   lint:
-    name: "Lint"
+    name: 'Lint'
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Node
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: borales/actions-yarn@v3.0.0
         with:
-          node-version: 14.x
-          cache: npm
-      - name: Install Dependencies
-        run: npm ci
+          cmd: install # will run `yarn install` command
       - name: Lint
-        run: npm run lint
+        run: yarn lint
 
   test:
-    name: "Test"
+    name: 'Test'
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Node
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: borales/actions-yarn@v3.0.0
         with:
-          node-version: 14.x
-          cache: npm
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run Tests
-        run: npm test
+          cmd: install # will run `yarn install` command
+      - uses: borales/actions-yarn@v3.0.0
+        with:
+          cmd: build # will run `yarn build` command
+      - uses: borales/actions-yarn@v3.0.0
+        with:
+          cmd: test # will run `yarn test` command
